<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:id="@+id/main">

    <LinearLayout
        android:id="@+id/EdtPflHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/imgEdtPflArrowLeft"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_left" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:text="@string/edit_profile"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvEdtPflCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edt_cancel"
            android:textColor="@color/hijau"
            android:fontFamily="@font/poppins_bold"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/EdtPflHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- FOTO PROFIL -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginBottom="32dp">

                <FrameLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp">

                    <ImageView
                        android:id="@+id/imgEdtPflFotoProfil"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_circle_gray"
                        android:src="@drawable/ic_profil"
                        android:scaleType="centerCrop"/>

                </FrameLayout>

                <TextView
                    android:id="@+id/tvEdtPflUbahProfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginTop="12dp"
                    android:text="@string/profil_nama"
                    android:gravity="center_horizontal"/>

            </LinearLayout>

            <!-- INPUT -->
            <TextView
                android:id="@+id/tvEdtPflNamaPanjang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/full_name"
                android:textColor="@color/hijau"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_bold"/>

            <EditText
                android:id="@+id/edtPflEditTextNamaPanjang"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_input"
                android:textColor="@color/black"
                android:padding="16dp"
                android:hint="@string/edt_profil_name"
                android:fontFamily="@font/poppins_regular"/>

            <TextView
                android:id="@+id/tvEdtPflEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:text="@string/email"
                android:textColor="@color/hijau"
                android:textSize="12sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_bold"/>

            <EditText
                android:id="@+id/edtPflEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_input"
                android:padding="16dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textEmailAddress"
                android:hint="@string/edt_profil_email"/>

            <TextView
                android:id="@+id/tvEdtPflNomorTelepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/hijau"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/phone"
                android:fontFamily="@font/poppins_bold"/>

            <EditText
                android:id="@+id/edtPflEditTextNomorTelepon"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_input"
                android:padding="16dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:inputType="phone"
                android:hint="@string/edt_profil_no_telp"/>

            <!-- BUTTON -->
            <Button
                android:id="@+id/btnSimpanEditProfil"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/save_changes"
                android:backgroundTint="@color/hijau"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_bold"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>