<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_light"
    tools:context=".TentangAplikasiActivity">

    <!-- HEADER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgTentangApkArrowLeft"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_left"/>

        <TextView
            android:id="@+id/tvTentangApk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:text="@string/about_app"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"/>

        <View
            android:layout_width="32dp"
            android:layout_height="32dp"/>
    </LinearLayout>

    <!-- CONTENT -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:orientation="vertical">

            <!-- LOGO -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginBottom="32dp">

                <FrameLayout
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:background="@drawable/bg_logo_container"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/imgTentangApkLogo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/logo"
                        android:scaleType="centerCrop"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/tvTentangApkNamaApk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_custom"
                    android:textSize="24sp"
                    android:textColor="@color/hijau"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tvTentangApkVersi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version"
                    android:textSize="12sp"
                    android:textColor="@color/text_muted"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>

            <!-- DESKRIPSI -->
            <TextView
                android:id="@+id/tvTentangApkJudulDeskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/short_description"
                android:textColor="@color/orange"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_bold"/>

            <TextView
                android:id="@+id/tvTentangApkIsiDeskripsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_card"
                android:lineSpacingExtra="4dp"
                android:padding="16dp"
                android:text="@string/app_description"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/gray" />

            <!-- DEVELOPER -->
            <TextView
                android:id="@+id/tvTentangAPkJudulDeveloper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/developer_title"
                android:textColor="@color/orange"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_card"
                android:padding="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imgTentangApkCode"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_code"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTentangApkNamaDeveloper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/developer_name"
                        android:textColor="@color/black_younger"
                        android:fontFamily="@font/poppins_bold"/>

                    <TextView
                        android:id="@+id/tvTentangApkNamaUika"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/developer_campus"
                        android:textColor="@color/text_muted"
                        android:textSize="12sp"
                        android:fontFamily="@font/poppins_regular"/>
                </LinearLayout>
            </LinearLayout>

            <!-- FOOTER -->
            <TextView
                android:id="@+id/tvTentangApkHakCipta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/copyright"
                android:textSize="11sp"
                android:textColor="@color/text_muted"
                android:fontFamily="@font/poppins_regular"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>